# alltoolkit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  generate_csv.py  go.mod  regenerate_outline.py  send-wallpaper.ts  unicode.txt
.github/: PUBLISH_DRAFTS.md
.github/workflows/: ci.yml
ArkTS/array_utils/: README.md  array_utils_test.ets  mod.ets
ArkTS/color_utils/: color_utils_test.ets  mod.ets
ArkTS/date_utils/: README.md  date_utils_test.ets  examples.ets  mod.ets
ArkTS/examples/: array_utils_example.ets  color_utils_example.ets  http_utils_example.ets  string_utils_example.ets  validation_utils_example.ets
ArkTS/http_utils/: http_utils_test.ets  mod.ets
ArkTS/string_utils/: mod.ets  (+1 more)
C/: example_string_utils  example_string_utils.c  string_utils.h
C#/: README.md
Go/: go.mod  path_utils_test.go  string_utils.go  string_utils_test.go
JavaScript/: README.md
Kotlin/: DateTimeUtils.kt  ExampleDateTimeUtils.kt
PHP/: ExampleStringUtils.php
Python/: README.md  clipboard_utils.py  clipboard_utils_README.md  clipboard_utils_test.py  datetime_utils.py  datetime_utils_test.py  example_file_utils.py  file_utils.py  file_utils_test.py  gzip_test.txt  large.txt  qr_utils.py  qr_utils_README.md  qr_utils_test.py  run_all_tests.py  run_tests.sh
Rust/: collection_utils.rs  example_collection_utils.rs  example_math_utils.rs  libmath_utils.rlib  math_utils.rs  string_utils.rs
Rust/avl_tree_utils/: Cargo.toml  README.md
Rust/avl_tree_utils/examples/: advanced_usage.rs  basic_usage.rs
Rust/avl_tree_utils/src/: lib.rs
Rust/bloom_filter/: Cargo.toml  README.md
Rust/bloom_filter/examples/: basic.rs
Rust/bloom_filter/src/: lib.rs
Rust/brainfuck_interpreter_utils/: Cargo.toml  README.md
Rust/brainfuck_interpreter_utils/examples/: basic.rs
Rust/brainfuck_interpreter_utils/src/: lib.rs
Rust/color_utils/: Cargo.toml  README.md
Rust/color_utils/examples/: basic_usage.rs  color_schemes.rs  contrast_checker.rs
Rust/color_utils/src/: lib.rs
Rust/consistent_hash/: Cargo.toml  README.md
Rust/consistent_hash/examples/: basic.rs
Rust/consistent_hash/src/: lib.rs
Rust/consistent_hash_utils/: Cargo.toml  consistent_hash_utils_test.rs  mod.rs
Rust/consistent_hash_utils/examples/: usage_examples.rs
Rust/cron_expression_utils/: Cargo.toml  README.md
Rust/cron_expression_utils/examples/: basic_usage.rs
Rust/cron_expression_utils/src/: lib.rs
Rust/currency_utils/: Cargo.toml  README.md
Rust/currency_utils/examples/: usage_examples.rs
Rust/currency_utils/src/: lib.rs
Rust/date_utils/: Cargo.toml  GENERATION_REPORT.md  MODULE_INFO.md  README.md  mod.rs  tests.rs
Rust/date_utils/examples/: basic_usage.rs  date_arithmetic.rs  date_range.rs  formatting.rs
Rust/diffie_hellman_utils/: Cargo.toml  README.md  test  test_debug
Rust/diffie_hellman_utils/examples/: example.rs
Rust/diffie_hellman_utils/src/: lib.rs  test_debug.rs
Rust/disjoint_set/: Cargo.toml  README.md
Rust/disjoint_set/examples/: basic.rs
Rust/disjoint_set/src/: lib.rs
Rust/disjoint_set/tests/: integration.rs
Rust/dna_sequence_utils/: Cargo.toml  README.md
Rust/dna_sequence_utils/examples/: basic_usage.rs
Rust/dna_sequence_utils/src/: lib.rs
Rust/emoji_utils/: Cargo.toml  README.md
Rust/emoji_utils/examples/: usage_examples.rs
Rust/emoji_utils/src/: lib.rs
Rust/env_utils/: Cargo.toml  README.md  mod.rs
Rust/env_utils/examples/: basic.rs  dotenv.rs  validation.rs
Rust/geo_utils/: Cargo.toml  README.md
Rust/geo_utils/examples/: usage_examples.rs
Rust/geo_utils/src/: lib.rs
Rust/human_readable_utils/: Cargo.toml  README.md
Rust/human_readable_utils/examples/: usage_examples.rs
Rust/human_readable_utils/src/: lib.rs
Rust/hyperloglog_utils/: Cargo.toml  README.md
Rust/hyperloglog_utils/examples/: demo.rs
Rust/hyperloglog_utils/src/: lib.rs
Rust/levenshtein_utils/: Cargo.toml  README.md
Rust/levenshtein_utils/examples/: basic.rs  fuzzy_search.rs
Rust/levenshtein_utils/src/: lib.rs
Rust/lru_cache/: Cargo.toml  mod.rs  tests.rs
Rust/lru_cache/examples/: usage.rs
Rust/mask_utils/: Cargo.toml  mod.rs
Rust/mask_utils/examples/: basic.rs
Rust/morse_code_utils/: Cargo.toml  README.md
Rust/morse_code_utils/examples/: demo.rs
Rust/morse_code_utils/src/: lib.rs
Rust/process_utils/: Cargo.toml  GENERATION_REPORT.md  MODULE_INFO.md  README.md  mod.rs  process_utils_test.rs
Rust/process_utils/examples/: basic_usage.rs  batch_processor.rs  process_monitor.rs
Rust/regex_utils/: Cargo.toml  README.md
Rust/regex_utils/examples/: advanced.rs  basic.rs
Rust/regex_utils/src/: lib.rs
Rust/regex_utils/tests/: regex_utils_test.rs
Rust/roman_numeral_utils/: Cargo.toml  README.md
Rust/roman_numeral_utils/examples/: basic.rs
Rust/roman_numeral_utils/src/: lib.rs
Rust/semver_utils/: Cargo.toml  README.md
Rust/semver_utils/examples/: demo.rs
Rust/semver_utils/src/: lib.rs
Rust/skiplist/: Cargo.toml  README.md
Rust/skiplist/examples/: basic_operations.rs  concurrent.rs  leaderboard.rs  ordered_map.rs  performance.rs  range_queries.rs  rank_queries.rs
Rust/skiplist/src/: lib.rs
Rust/skiplist/tests/: skiplist_tests.rs
Rust/sliding_window_utils/: Cargo.toml
Rust/sliding_window_utils/examples/: usage_examples.rs
Rust/sliding_window_utils/src/: lib.rs
Rust/slug_utils/: Cargo.toml  README.md
Rust/slug_utils/examples/: usage.rs
Rust/slug_utils/src/: lib.rs
Rust/snowflake_utils/: Cargo.toml  README.md
Rust/snowflake_utils/examples/: snowflake_demo.rs
Rust/snowflake_utils/src/: lib.rs
Rust/suffix_array_utils/: Cargo.toml
Rust/suffix_array_utils/examples/: 01_basic_usage.rs  02_pattern_search.rs  03_repeated_substrings.rs  04_common_substrings.rs  05_distinct_substrings.rs  06_advanced_features.rs
Rust/suffix_array_utils/src/: lib.rs
Swift/: ExampleDateUtils.swift  ExampleStringUtils.swift
TypeScript/: OPTIMIZATION_SUMMARY.md  README.md  package-lock.json  package.json  tsconfig.json
Zig/: .gitignore
docs/: languages.md
scripts/: alltoolkit-monitor.sh  sync-skill-to-cron.py
(+3943 files in other folders)
