[package]
name = "avl_tree_utils"
version = "0.1.0"
edition = "2021"
authors = ["AllToolkit"]
description = "AVL self-balancing binary search tree implementation with zero external dependencies"
license = "MIT"
keywords = ["avl", "tree", "bst", "balanced", "data-structure"]
categories = ["data-structures", "algorithms"]

[dependencies]

[dev-dependencies]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "advanced_usage"
path = "examples/advanced_usage.rs"