[package]
name = "brainfuck_interpreter_utils"
version = "0.1.0"
edition = "2021"
description = "A complete Brainfuck language interpreter with loop support, memory bounds checking, and optimization"
license = "MIT"
authors = ["AllToolkit"]

[dependencies]

[dev-dependencies]

[features]
default = []