[package]
name = "consistent_hash_utils"
version = "1.0.0"
edition = "2021"
description = "一致性哈希工具模块 - 用于分布式系统的负载均衡和数据分片"
authors = ["AllToolkit"]
license = "MIT"
keywords = ["consistent-hash", "distributed", "load-balancing", "hash-ring"]
categories = ["algorithms", "data-structures"]

[lib]
name = "consistent_hash_utils"
path = "mod.rs"

[[bin]]
name = "usage_examples"
path = "examples/usage_examples.rs"

[[test]]
name = "consistent_hash_utils"
path = "consistent_hash_utils_test.rs"

[dev-dependencies]

[features]
default = []