[package]
name = "currency_utils"
version = "0.1.0"
edition = "2021"
authors = ["AllToolkit"]
license = "MIT"
description = "A comprehensive currency formatting and conversion utility library with zero external dependencies"
keywords = ["currency", "formatting", "money", "conversion", "finance"]
categories = ["finance", "utilities"]
readme = "README.md"

[lib]
name = "currency_utils"
path = "src/lib.rs"

[[example]]
name = "usage_examples"
path = "examples/usage_examples.rs"