[package]
name = "geo_utils"
version = "0.1.0"
edition = "2021"
authors = ["AllToolkit"]
license = "MIT"
description = "A comprehensive geographic coordinate utility library with zero external dependencies"
keywords = ["geo", "coordinates", "distance", "geohash", "location"]
categories = ["science", "utilities"]
readme = "README.md"

[lib]
name = "geo_utils"
path = "src/lib.rs"

[[example]]
name = "usage_examples"
path = "examples/usage_examples.rs"